[tool.poetry]
name = "ldtkpy"
version = "0.9.3"
description = "Load and parse LDtk files, with full types definitions."
authors = ["Yann Vaillant <va@yan.pm>"]

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
