[tool.poetry]
name = "ldtkpy"
version = "1.2.5"
description = "Load and parse LDtk files, with full types definitions."
authors = ["Yann Vaillant <va@yan.pm>"]
readme = "README.md"
homepage = "https://ldtk.io/api/"
repository = "https://github.com/vayan/ldtk-py"

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
